test_regress/t/t_var_ref_bad2.out
%Error: t/t_var_ref_bad2.v:12: Assigning to const ref variable: bad_const_set
%Error: t/t_var_ref_bad2.v:22: Ref argument requires matching types; port 'int_ref' requires VAR 'int_ref' but connection is VARREF 'bad_non_int'.
%Error: Exiting due to
